--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,30 @@
         android:icon="@mipmap/ic_launcher_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <!-- Splash screen -->
+
         <activity
-            android:name=".prevu"
-            android:label="@string/app_name" >
+            android:name=".SplashScreen"
+            android:label="@string/title_activity_splash_screen"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Main activity -->
+        <activity
+            android:name=".prevu"
+            android:label="@string/app_name" >
+        </activity>
+
+
+
+
         <activity
             android:name="com.android.prevu.rechercheLivre.Recherche"
             android:icon="@mipmap/ic_launcher_search"
@@ -85,6 +100,7 @@
             android:name=".CardFlipActivity"
             android:label="@string/title_activity_card_flip" >
         </activity>
+
     </application>
 
 </manifest>
