Revert "exemple fragments"
This reverts commit 897ed4c7c2348249114015794600293424867b16.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
     }
     sourceSets {
         main {
-            res.srcDirs = ['src/main/res', 'drawable-hdpi', 'src/main/res/drawable-hdpi/', 'src/main/res/drawable-mdpi', 'libs', 'src/main/libs', 'src/main/res/mipmap', 'src/main/res/anim', 'src/main/res/animator']
+            res.srcDirs = ['src/main/res', 'drawable-hdpi', 'src/main/res/drawable-hdpi/', 'src/main/res/drawable-mdpi', 'libs', 'src/main/libs', 'src/main/res/mipmap']
         }
     }
 }
